20/07/2015:
	- More OpenMP parallelization and cleanups to Transform.cc


17/07/2015:
	- Increased buffer memory for JPEG encoding to handle certain images or tiles that
	  encode at Q=100 to sizes significantly larger than the raw data.
	- Added new CACHE_CONTROL server parameter to allow user control over this. If not
	  set, it defaults to the previous default value of "max-age=86400".
	- More image processing routines now parallelized with OpenMP: bilinear interpolation, 
	  for example, now parallelized and considerably faster.


19/03/2015:
	- Fix to KakaduImage.cc to check for increases in stripe heights and make sure
	  sufficient memory is allocated.


13/02/2015:
	- Added checks for NULL FCGX_GetParam results and to empty HTTP_IF_MODIFIED_SINCE.
	  See: https://github.com/ruven/iipsrv/issues/33 - thanks to Brian Helba.


12/02/2015:
	- Fixed @id decoding in IIIF.cc for paths containing slashes


19/01/2015:
	- Added missing <cctype> include in URL.h and replaced pow(2.0,x) with bit shifting in
	  KakaduImage.cc and View.cc. Now compiles cleanly with VisualStudio Express.
	- Added extra OpenMP parallel declarations to Transform.cc and autoconf directive to
	  enable OpenMP by default.


09/01/2015:
	- Better logging for exceptions in Main.cc


27/11/2014:
	- Added new magic identifier for BigTIFF images to IIPImage.cc


25/11/2014:
	- Fix of rounding error problem in View.cc for calculating resolution level.
	- Fix to IIIF.cc to properly handle resolution 0 requests.


24/11/2014:
	- Fix to TileManager.cc to properly calculate tile height for final row.
	- Updates to IIIF code to ensure tiles are properly detected.
	- Changes to View class to calculate regions from full resolution image.


24/10/2014:
	- Updated MINMAX command syntax in Task.cc to channel:min,max


22/10/2014:
	- Updated KakaduImage.cc to use Kakadu namespaces in version 7.5 and greater.


05/09/2014:
	- Updated IIIF info.json output to be compliant with changed IIIF 2.0 specification.

